# AiLessonStudio

./: .gitattributes  .gitignore  PIPELINE.md  README.md  chatgpt_project_context.json  pyproject.toml  requirements.txt  run_demo.py  streamlit_app.py
checker1/model/distilbert_error_type_ckpt/checkpoint-360/: config.json  model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
pipeline/: __init__.py  api_keys.py  checker.py  clients.py  config.py  frame_checker.py  image_pipeline.py  pipeline.py  planner.py  prompts.py  single_api_video.py  student_analyzer.py  types.py  utils.py  validation.py  video_pipeline.py
tests/: test_checker1_research.py  test_checker2_research.py  test_frame_checker.py  test_render_failfast.py  test_student_analyzer.py  test_validation.py
